--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ p{
     
   
 }
-.navbar{
+#header .navbar{
     
     display: flex;
     justify-content: space-between;
@@ -46,29 +46,32 @@ p{
 }
 
 
-.logo{
+#header .logo{
     display: flex;
     align-items: center;
     height: 100%;
 }
-.logo img{
+#header .logo img{
     display: block;
     width: 150px;
 }
-.list a{
+#header .list a{
     display: block;
     color: white;
 }
-.list a:hover{
+#header .list a:hover{
     color: #864d18;
 }
-.list ul{
+#header .list ul{
     display: flex;
     align-items: center;
 }
-.list ul li{
+#header .list ul li{
     margin: 0 15px;
     padding: 5px;
+}
+#header .list ul li:nth-child(n+2) a{
+  cursor: not-allowed;
 }
 .header__burgermenu{
     display: none;
@@ -159,6 +162,7 @@ p{
     background: white;
     color: orange;
     border: 1px solid #b4671fab;
+    cursor: not-allowed;
 }
 #showcase .social{
     display: flex;
@@ -171,6 +175,9 @@ p{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.icon a{
+  cursor: not-allowed;
 }
 #showcase .social i{
     font-size: 25px;
@@ -265,6 +272,9 @@ p{
     background: url('../img/hands-img.png') no-repeat center center/cover;
 
 }
+.solution-img a{
+  cursor: not-allowed;
+}
 .solution-img i{
     font-size: 50px;
     color: white;
@@ -273,7 +283,8 @@ p{
 }
 .solution-img i:hover{
     color: #e0e0e0;
-    font-size: 60px;
+    /* font-size: 60px; */
+    transform: scale(1.1);
     
 }
 .solution-img img{
@@ -293,8 +304,19 @@ p{
 .py-1{
     margin: 30px 20px;
 }
+#footer .list ul{
+  display: flex;
+  align-items: center;
+}
+#footer .list ul li{
+  margin: 0 15px;
+  padding: 5px;
+}
 #footer .list ul li a{
     color: black;
+}
+#footer .list ul li a{
+  cursor: not-allowed;
 }
 #footer .list a:hover{
     color: #864d18;
